# chatique

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: alembic.ini  main.py  pyproject.toml  setup.cfg  utils.py
backend/app/api/: auth.py  deps.py  routers.py
backend/app/api/api_v1/: router.py
backend/app/api/api_v1/endpoints/: chat.py  login.py  users.py
backend/app/constants/: role.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  crud_company.py  crud_message.py  crud_role.py  crud_room.py  crud_user.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 20210422_101817_90bc49402289_added_initial_table.py  20210427_234335_3835d3051042_added_company_table.py  20210503_230502_5fe344055853_add_role_table.py  20210505_001639_848e2b9d521a_add_role_table.py  20210522_020014_bb5c83e0b2bd_change_base_model.py  20210522_023029_203c75f35972_change_role_model.py  20210525_002636_27cfef1d8c80_change_role_model.py  20210607_231558_2a7ab429d4e5_add_room_model.py  20210607_231729_379a435955c0_add_message_model.py
backend/app/models/: __init__.py  company.py  message.py  mixins.py  role.py  room.py  user.py
backend/app/schemas/: __init__.py  company.py  message.py  role.py  room.py  token.py  user.py
backend/app/sevices/: logger.py  pipelines.py
