[tool.poetry]
name = "chatique"
version = "0.1.0"
description = ""
authors = ["Alexander Golovnya <algol.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
