[tool.poetry]
name = "chatique"
version = "0.1.0"
description = ""
authors = ["Alexander Golovnya <algol.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
alembic = "^1.5.8"
psycopg2-binary = "^2.8.6"
flake8 = "^3.9.0"
gunicorn = "^20.1.0"
databases = "^0.4.3"
asyncpg = "^0.22.0"
aiologger = "^0.6.1"
PyJWT = "^2.1.0"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
email-validator = "^1.1.2"
python-multipart = "^0.0.5"
websockets = "^9.1"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
